--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -15,27 +15,27 @@
  
  .spinner div:nth-child(1) {
     animation-delay: 0.15s;
-    background-color: rgba(71,75,255,0.9);
+    background-color: rgba(71, 255, 120, 0.9);
  }
  
  .spinner div:nth-child(2) {
     animation-delay: 0.3s;
-    background-color: rgba(71,75,255,0.8);
+    background-color: rgba(71, 255, 120, 0.8);
  }
  
  .spinner div:nth-child(3) {
     animation-delay: 0.45s;
-    background-color: rgba(71,75,255,0.7);
+    background-color: rgba(71, 255, 120, 0.7);
  }
  
  .spinner div:nth-child(4) {
     animation-delay: 0.6s;
-    background-color: rgba(71,75,255,0.6);
+    background-color: rgba(71, 255, 120, 0.6);
  }
  
  .spinner div:nth-child(5) {
     animation-delay: 0.75s;
-    background-color: rgba(71,75,255,0.5);
+    background-color: rgba(71, 255, 120, 0.5);
  }
  
  @keyframes spinner-4t3wzl {
